public/stylesheets/sites/layout.css
/* ... */
div#header ul.menu li#region_option.clicked div.suboptions_body {position:absolute; top:35px; left:-19px; z-index:110; background:url('/images/sites/common/menu/region_body_clicked.png') no-repeat 0 0; display:none; width:238px; height:234px; display:inline; padding:7px; display:inline;}
div#header ul.menu li#region_option.clicked div.header_title a {margin:8px 0 0 15px;}
div#header ul.menu li#region_option.clicked ul.content {float:left; width:204px; height:218px; overflow-x:hidden; overflow-y:auto; margin:0 0 0 13px;}
div#header ul.menu li#region_option.clicked ul.content li {float:left; margin:3px 0 0 0; width:185px;}
div#header ul.menu li#region_option.clicked ul.content li a {float:left; margin:0; font:normal 13px "PT Sans"; color:#C0C0BF; text-decoration:none;}
div#header ul.menu li#region_option.clicked ul.content li a:hover {color:white;}


div#header ul.menu li#organization_option.clicked div.header_title {position:absolute; top:0; left:-15px; background:url('/images/sites/common/menu/org_head_clicked.png') no-repeat 0 0; width:138px; height:35px; display:inline;}
div#header ul.menu li#organization_option.clicked div.suboptions_body {position:absolute; top:35px; left:-15px; z-index:110; background:url('/images/sites/common/menu/org_body_clicked.png') no-repeat 0 0; display:none; width:238px; height:234px; display:inline; padding:7px; display:inline;}
div#header ul.menu li#organization_option.clicked div.suboptions_body input[type="text"]#ngos_search{float:left; margin:3px 0 0 7px; background:url('/images/sites/common/menu/input_ngos.png') no-repeat 0 0; width:191px; height:22px; padding:0 7px; font:normal 13px Arial; color:#B7B7B7; border:0px;}
div#header ul.menu li#organization_option.clicked div.header_title a {margin:8px 0 0 15px;}
div#header ul.menu li#organization_option.clicked ul.content {float:left; width:204px; height:189px; overflow-x:hidden; overflow-y:auto; margin:17px 0 0 13px;}
div#header ul.menu li#organization_option.clicked ul.content li {float:left; margin:3px 0 0 0; width:185px;}
div#header ul.menu li#organization_option.clicked ul.content li a {float:left; margin:0; font:normal 13px "PT Sans"; color:#C0C0BF; text-decoration:none;}
div#header ul.menu li#organization_option.clicked ul.content li a:hover {color:white;}


div#header ul.menu li#organization_option.clicked ul#orgs_list {float:left; }
div#header ul.menu li#organization_option.clicked ul#orgs_list li {float:left; margin:7px 0 0 0;}
div#header ul.menu li#organization_option.clicked ul#orgs_list li a {float:left; font:normal 13px Arial; color:#C1C1C0;}
div#header ul.menu li#organization_option.clicked ul#orgs_list li a:hover {color:white;}

div#header ul.menu li.clicked ul.suboptions {display:inline;}
div#header ul.menu li a {float:left; font:normal 13px "Geneva"; color:#C2C1C1; text-decoration:none; margin:8px 0 0 0; line-height:15px;}
div#header ul.menu li a:hover {cursor:pointer; color:white;}
div#header ul.menu li a span.with_suboptions {float:right; width:6px; height:3px; margin:7px 0 0 2px; background:url('/images/sites/common/arrow_menu.png') no-repeat 0 0;}
div#header ul.menu li div.suboptions_body {display:none;}
div#header ul.menu li ul.suboptions {position:absolute; top:20px; left:-13px; background-color:#2F2E2C; z-index:110; display:none;}
div#header ul.menu li ul.suboptions li {float:left; width:152px; padding:0 5px; margin:10px 0 0 0; height:auto;}


div#header div.right {margin:11px 0 0 0; width:auto; height:20px; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
div#header div.right form.search {position:relative; float:right;}
div#header div.right form.search span.input_search {float:left; width:111px; height:20px; background:url('/images/sites/common/input_search_bkg.png') no-repeat 0 0; position:relative;}
div#header div.right form.search span.input_search input[type="text"]{position:absolute; top:2px; left:5px; width:83px; height:14px; font:normal 13px Arial; color:#999999; border:0px;}
div#header div.right form.search span.input_search input[type="submit"] {position:absolute; right:5px; top:3px; width:15px; height:14px; background:url('/images/sites/common/bttn_search.png') no-repeat 0 0; border:none;}

div#map {width:100%; height:475px; background:#99B3CA; border-bottom:2px solid white; border-top:2px solid white; display:inline-block; vertical-align:top; zoom:1; *display:inline;}
div#map.home {border-top:none;}

div#small_map {width:100%; height:280px; background:#99B3CA; border-top:2px solid white; border-bottom:2px solid white;}
a#zoomIn {position:absolute; display:none; width:26px; height:25px; background:url('/images/sites/maps/zoom_in.png') no-repeat 0 0; z-index:100;}
a#zoomIn:hover {background-position:0 -25px;}
a#zoomOut {position:absolute; display:none; width:26px; height:25px; background:url('/images/sites/maps/zoom_out.png') no-repeat 0 0; z-index:100;}
a#zoomOut:hover {background-position:0 -25px;}
div.map_style {position:absolute; display:none; top:10px; left:50px; width:113px; height:26px; background:url('/images/sites/maps/map_style.png') no-repeat 0 0; overflow:hidden; z-index:100;}
div.map_style:hover {cursor:default;}
div.map_style p {margin:7px 0 0 10px; font:normal 13px 'PT Sans'; color:white;}
div.map_style ul {width:93px; margin:10px 10px 0 10px;}
div.map_style ul li {padding:3px 0 3px;}
div.map_style ul li a {color:white; text-decoration:none;}
div.map_style ul li a:hover {cursor:pointer;}


/* LEFT COLUMN - RIGHT BIG BLOCK */
div.main_head {display:inline-block; vertical-align:top; zoom:1; *display:inline; width:100%;}
div.inner_main_head {position:relative; width:942px; margin:0 auto;}
div.main_head div.left {width:248px; padding:30px 32px; background:url('/images/sites/common/mesh.png') repeat 0 0; display:inline-block; vertical-align:top; zoom:1; *display:inline;}
div.main_head div.left h1 {width:237px; font:normal 25px "PT Sans Bold"; color:white; text-shadow:0 1px #A44B42; z-index:50;}
/* ... */

